test(inference): use Android-compatible fixture byte writes